crossedge delivery at 28th December

--- a/textae.html
+++ b/textae.html
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
     <script type="text/javascript" src="js/jquery.jeditable.mini.js"></script>
     <script type="text/javascript" src="js/jquery.browser.min.js"></script>
-    <script type="text/javascript" src="js/jquery.balloon.js"></script>
     <script type="text/javascript" src="js/jquery.jsPlumb-1.3.14-all-modified.js"></script>
     <script type="text/javascript" src="js/editor.js"></script>
 
@@ -36,8 +35,10 @@
     <!-- marked text -->
     <div id="doc_area"></div>
     <div id="ins_area"></div>
-    <div id="rel_area"></div>
-
+    <div id="rel_base_area">
+        <div id="rel_area"></div>
+        <div id="clone_area"></div>
+    </div>
 
     <div id="control_area">
 
