undo/redo engine rewritten.

--- a/textae.html
+++ b/textae.html
@@ -36,8 +36,8 @@
             <input type="image" src="images/edit_off_btn.png" id="edit_btn" title="Span edit mode (Toggle)" />
             <input type="image" src="images/relation_off_btn.png" id="relation_btn" title="Relation edit mode (Toggle)" />
         </td><td>
-            <input type="image" src="images/multiple_btn.png" id="multiple_btn" title="Clone all" disabled="true"/>
-            <input type="image" src="images/always_multiple_on_btn.png" title="Auto clone (Toggle)" id="always_multiple_btn" disabled="true"/>
+            <input type="image" src="images/multiple_btn.png" id="multiple_btn" title="Replicate span annotation" disabled="true"/>
+            <input type="image" src="images/always_multiple_on_btn.png" title="Auto replicate (Toggle)" id="always_multiple_btn" disabled="true"/>
         </td></tr>
         <tr><td colspan="2">
             <div id="slider_area" title="opacity of connectors" style="text-align:center">
