--- a/textav.html
+++ b/textav.html
@@ -39,19 +39,19 @@
 
     <!-- relation type area -->
     <div class="type_show_area">
-        <div id="relation_list"></div>
+        <div id="relation_types"></div>
     </div>
 
     <!-- instype area -->
-    <div class="type_show_area">
+<!--     <div class="type_show_area">
         <div id="instype_list"></div>
     </div>
-
+ -->
     <!-- modtype area -->
-    <div class="type_show_area">
+<!--     <div class="type_show_area">
         <div id="modtype_list"></div>
     </div>
-
+ -->
     <div id="save_dialog" class="dialog">
         <h1>Save</h1>
         <form autocomplete="on">
