--- a/textae.html
+++ b/textae.html
@@ -8,9 +8,10 @@
 
     <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
-    <script type="text/javascript" src="js/jquery.jeditable.mini.js"></script>
-    <script type="text/javascript" src="js/jquery.browser.min.js"></script>
-    <script type="text/javascript" src="js/jquery.jsPlumb-1.3.14-all-modified.js"></script>
+    <!--script type="text/javascript" src="js/jquery.jeditable.mini.js"></script-->
+    <!--script type="text/javascript" src="js/jquery.browser.min.js"></script-->
+    <!--script type="text/javascript" src="js/jquery.jsPlumb-1.3.14-all-modified.js"></script-->
+    <script type="text/javascript" src="js/jquery.jsPlumb-1.3.16-all.js"></script>
     <script type="text/javascript" src="js/textae.js"></script>
 </head>
 
