load and save dialog fixed to use the standard prompt dialog.

--- a/textav.html
+++ b/textav.html
@@ -26,7 +26,8 @@
 
     <table class="palette">
         <tr><td colspan="2">
-            <div id="slider_area" title="opacity of connectors" style="text-align:center">
+            <input type="image" src="images/load_btn.png" id="load_btn" title="Load" style="vertical-align:middle" />
+            <div id="slider_area" title="opacity of connectors" style="text-align:center;vertical-align:middle">
                 <div id="slider"></div>
             </div>
         </td></tr>
