--- a/textav.html
+++ b/textav.html
@@ -25,9 +25,9 @@
 <div id="control_area">
 
     <table class="palette">
-        <tr><td colspan="2">
+        <tr><td>
             <input type="image" src="images/load_btn.png" id="load_btn" title="Load" style="vertical-align:middle" />
-            <div id="slider_area" title="opacity of connectors" style="text-align:center;vertical-align:middle">
+            <div id="slider_area" title="opacity of connectors" style="vertical-align:middle">
                 <div id="slider"></div>
             </div>
         </td></tr>
