slider deleted. viewer html removed.

--- a/textae.html
+++ b/textae.html
@@ -39,12 +39,12 @@
             <div class="button" id="btn_replicate" title="Replicate span annotation"></div>
             <div class="button" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
         </td></tr>
-        <tr><td colspan="2">
+<!--         <tr><td colspan="2">
             <div id="slider_area" title="opacity of connectors" style="text-align:center">
                 <div id="slider"></div>
             </div>
         </td></tr>
-    </table>
+ -->    </table>
 
     <div class="type_show_area">
         <div id="span_types"></div>
