config location changed. configuration process stabilized.

--- a/textae.html
+++ b/textae.html
@@ -18,7 +18,7 @@
 <!-- header area -->
 <div id="header_area">
     <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
-    <div id = "notice"></div>
+    <div id = "message"></div>
 </div>
 
 <div id="control_area">
@@ -47,11 +47,15 @@
  -->    </table>
 
     <div class="type_show_area">
-        <div id="span_types"></div>
+        <div id="span_types"><span style="font-style:italic">no span type defined</span></div>
     </div>
 
     <div class="type_show_area">
-        <div id="relation_types"></div>
+        <div id="relation_types"><span style="font-style:italic">no relation type defined</span></div>
+    </div>
+
+    <div id="notice">
+        You can make your configuration of TextAE at the <a href="http://bionlp.dbcls.jp/textae-config/">TextAE-Config</a> page.
     </div>
 
     <div id="loading" style="display: none; width:200px; height:200px;"><img src="images/loadinfo.net.gif"/></div>
