--- a/textae.html
+++ b/textae.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
 
-    <script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/jquery.jsPlumb-1.3.16-all.js"></script>
     <script type="text/javascript" src="js/textae.js"></script>
 </head>
@@ -15,44 +15,78 @@
 <body>
 <div id="css_area"></div>
 
-<!-- header area -->
-<div id="header_area">
-    <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
-    <div id = "message"></div>
+<div id="textae_container">
+
+     <div id="header">
+        <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
+        <div class = "icon_bar">
+            <div class="separator"></div>
+            <div class="icon" id="btn_read" title="Read"></div>
+            <div class="icon" id="btn_write" title="Write"></div>
+            <div class="separator"></div>
+            <div class="icon" id="btn_undo" title="Undo (z)"></div>
+            <div class="icon" id="btn_redo" title="Redo (y)"></div>
+            <div class="separator"></div>
+            <div class="icon" id="btn_replicate" title="Replicate span annotation (r)"></div>
+            <div class="icon" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
+            <div class="separator"></div>
+            <div class="icon" id="btn_pallet" title="Show pallet (t)"></div>
+            <div class="separator"></div>
+            <div class="icon" id="btn_delete" title="Delete (d)"></div>
+            <div class="icon" id="btn_copy" title="Copy (c)"></div>
+            <div class="icon" id="btn_paste" title="Paste (v)"></div>
+            <div class="separator"></div>
+            <div class="icon" id="btn_help" title="Help (F1)"></div>
+            <div class="separator"></div>
+        </div>
+    </div>
+
+    <div id="body">
+        <div id="text_box"></div>
+        <div id="annotation_box"></div>
+    </div>
+
+    <div id="widgets">
+        <div id="dialog-form" title="Read Document with Annotation">
+        <p class="validateTips">All form fields are required.</p>
+     
+        <form>
+            <fieldset>
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" class="text ui-widget-content ui-corner-all" />
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" value="" class="text ui-widget-content ui-corner-all" />
+                <label for="password">Password</label>
+                <input type="password" name="password" id="password" value="" class="text ui-widget-content ui-corner-all" />
+            </fieldset>
+        </form>
+        </div>
+    </div>
+
+    <div id="footer">
+        <div id = "message"></div>
+    </div>
+
 </div>
 
-<div id="control_area">
+
+<!-- header area -->
+
+<!-- <div id="control_area">
 
     <table class="palette">
         <tr><td>
-            <div class="button" id="btn_load" title="Load"></div>
-            <div class="button" id="btn_save" title="Save"></div>
+            <div class="icon pushed" id="btn_mode_view" title="View mode (v)"></div>
+            <div class="icon" id="btn_mode_span" title="Span edit mode (s)"></div>
+            <div class="icon" id="btn_mode_relation" title="Relation edit mode (r)"></div>
         </td><td>
-            <div class="button" id="btn_undo" title="Undo (z)"></div>
-            <div class="button" id="btn_redo" title="Redo (y)"></div>
         </td></tr>
-        <tr><td>
-            <div class="button pushed" id="btn_mode_view" title="View mode (v)"></div>
-            <div class="button" id="btn_mode_span" title="Span edit mode (s)"></div>
-            <div class="button" id="btn_mode_relation" title="Relation edit mode (r)"></div>
-        </td><td>
-            <div class="button" id="btn_replicate" title="Replicate span annotation"></div>
-            <div class="button" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
-        </td></tr>
-<!--         <tr><td colspan="2">
+        <tr><td colspan="2">
             <div id="slider_area" title="opacity of connectors" style="text-align:center">
                 <div id="slider"></div>
             </div>
         </td></tr>
- -->    </table>
-
-    <div class="type_show_area">
-        <div id="span_types"><span style="font-style:italic">no span type defined</span></div>
-    </div>
-
-    <div class="type_show_area">
-        <div id="relation_types"><span style="font-style:italic">no relation type defined</span></div>
-    </div>
+    </table>
 
     <div id="notice">
         You can make your configuration of TextAE at the <a href="http://bionlp.dbcls.jp/textae-config/">TextAE-Config</a> page.
@@ -61,14 +95,7 @@
     <div id="loading" style="display: none; width:200px; height:200px;"><img src="images/loadinfo.net.gif"/></div>
 
 </div>
-
-<!-- contents -->
-<div id="document_frame">
-    <div id="doc_area"></div>
-    <div id="ins_area"></div>
-    <div id="rel_area"></div>
-    <div id="clone_area"></div>
-</div>
+ -->
 
 </body>
 </html>
