span manipulation updated. entity button added.

--- a/textae.html
+++ b/textae.html
@@ -21,16 +21,17 @@
         <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
         <div class = "icon_bar">
             <div class="separator"></div>
-            <div class="icon" id="btn_read" title="Read"></div>
-            <div class="icon" id="btn_write" title="Write"></div>
+            <div class="icon" id="btn_read" title="Access (a)"></div>
+            <div class="icon" id="btn_write" title="Save (s)"></div>
             <div class="separator"></div>
             <div class="icon" id="btn_undo" title="Undo (z)"></div>
-            <div class="icon" id="btn_redo" title="Redo (y)"></div>
+            <div class="icon" id="btn_redo" title="Redo (x)"></div>
             <div class="separator"></div>
             <div class="icon" id="btn_replicate" title="Replicate span annotation (r)"></div>
             <div class="icon" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_pallet" title="Show pallet (t)"></div>
+            <div class="icon" id="btn_entity" title="New entity (e)"></div>
+            <div class="icon" id="btn_pallet" title="Show pallet (q)"></div>
             <div class="separator"></div>
             <div class="icon" id="btn_delete" title="Delete (d)"></div>
             <div class="icon" id="btn_copy" title="Copy (c)"></div>
