--- a/textae.html
+++ b/textae.html
@@ -21,23 +21,23 @@
         <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
         <div class = "icon_bar">
             <div class="separator"></div>
-            <div class="icon" id="btn_read" title="Access (a)"></div>
-            <div class="icon" id="btn_write" title="Save (s)"></div>
+            <div class="icon" id="btn_read" title="Access [A]"></div>
+            <div class="icon" id="btn_write" title="Save [S]"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_undo" title="Undo (z)"></div>
-            <div class="icon" id="btn_redo" title="Redo (x)"></div>
+            <div class="icon" id="btn_undo" title="Undo [Z]"></div>
+            <div class="icon" id="btn_redo" title="Redo [X]"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_replicate" title="Replicate span annotation (r)"></div>
+            <div class="icon" id="btn_replicate" title="Replicate span annotation [R]"></div>
             <div class="icon" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_entity" title="New entity (e)"></div>
-            <div class="icon" id="btn_pallet" title="Show pallet (q)"></div>
+            <div class="icon" id="btn_entity" title="New entity [E]"></div>
+            <div class="icon" id="btn_pallet" title="Show pallet [Q]"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_delete" title="Delete (d)"></div>
-            <div class="icon" id="btn_copy" title="Copy (c)"></div>
-            <div class="icon" id="btn_paste" title="Paste (v)"></div>
+            <div class="icon" id="btn_delete" title="Delete [D]"></div>
+            <div class="icon" id="btn_copy" title="Copy [C]"></div>
+            <div class="icon" id="btn_paste" title="Paste [V]"></div>
             <div class="separator"></div>
-            <div class="icon" id="btn_help" title="Help (F1)"></div>
+            <div class="icon" id="btn_help" title="Help [H]"></div>
             <div class="separator"></div>
         </div>
     </div>
