--- a/textae.html
+++ b/textae.html
@@ -39,7 +39,7 @@
             <div class="icon" id="btn_paste" title="Paste [V]"></div>
             <div class="separator"></div>
             <div class="icon" id="btn_help" title="Help [H]"></div>
-            <!-- <div class="icon" id="btn_about" title="About"></div> -->
+            <div class="icon" id="btn_about" title="About"></div>
             <div class="separator"></div>
         </div>
     </div>
