before relation selection is changed.

--- a/textae.html
+++ b/textae.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="css/jquery.ui.slider.css" />
+    <link rel="stylesheet" href="css/jquery-ui.css" />
     <link rel="stylesheet" href="css/textae.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/jquery.jsPlumb-1.3.16-all.js"></script>
+    <script type="text/javascript" src="js/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="js/textae.js"></script>
 </head>
 
@@ -37,6 +37,8 @@
             <div class="icon" id="btn_delete" title="Delete [D]"></div>
             <div class="icon" id="btn_copy" title="Copy [C]"></div>
             <div class="icon" id="btn_paste" title="Paste [V]"></div>
+            <div class="separator"></div>
+            <input class="control" id="line-height" />
             <div class="separator"></div>
             <div class="icon" id="btn_help" title="Help [H]"></div>
             <div class="icon" id="btn_about" title="About"></div>
