--- a/textae.html
+++ b/textae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="css/jquery-ui.css" />
+    <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
