--- a/textae.html
+++ b/textae.html
@@ -44,6 +44,10 @@
             <div class="icon" id="btn_about" title="About"></div>
             <div class="separator"></div>
         </div>
+        <div id="local_annotation_dialog">
+            <label for="local_annotation_json">local io :</label>
+            <input id="local_annotation_json" type="file"　name="hoge" />
+        </div>
     </div>
 
     <div id="body">
@@ -72,10 +76,5 @@
     </div>
 
 </div>
-
-<div id="local_annotation_dialog">
-    <input id="local_annotation_json" type="file" />
-</div>
-
 </body>
 </html>
