--- a/textae.html
+++ b/textae.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
     <script type="text/javascript" src="js/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="js/textae.js"></script>
 </head>
