change html element name.

--- a/textae.html
+++ b/textae.html
@@ -45,8 +45,8 @@
             <div class="separator"></div>
         </div>
         <div id="local_annotation_dialog">
-            <label for="local_annotation_json">local io :</label>
-            <input id="local_annotation_json" type="file"　name="hoge" />
+            <label for="input_file_local_annotaton_json">local io :</label>
+            <input id="input_file_local_annotaton_json" type="file"　name="hoge" />
         </div>
     </div>
 
