a div tag is changed to span tag that contains input tag for loca-io, because it has no blcok element.

--- a/textae.html
+++ b/textae.html
@@ -44,10 +44,10 @@
             <div class="icon" id="btn_about" title="About"></div>
             <div class="separator"></div>
         </div>
-        <div id="local_annotation_dialog">
+        <span id="local_annotation">
             <label for="input_file_local_annotaton_json">local io :</label>
             <input id="input_file_local_annotaton_json" type="file"　name="hoge" />
-        </div>
+        </span>
     </div>
 
     <div id="body">
