change design of a dialog to load anotation.json.

--- a/textae.html
+++ b/textae.html
@@ -45,11 +45,13 @@
             <div class="icon" id="btn_about" title="About"></div>
             <div class="separator"></div>
         </div>
-        <div id="dialog_load_file" title="Load document with annotation." style="display:none;">        
-            <span id="local_annotation">
-                <label for="input_file_local_annotaton_json">Load from local file :</label>
-                <input id="input_file_local_annotaton_json" type="file"　name="hoge" />
-            </span>
+        <div id="dialog_load_file" title="Load document with annotation.">
+            <div>
+                Sever :<input type="text" style="width:345px"/><input type="button" value="OK" />
+            </div> 
+            <div>
+                Local :<input type="file"　/>
+            </div>
         </div>
     </div>
 
