add save dialog.

--- a/textae.html
+++ b/textae.html
@@ -53,6 +53,14 @@
                 Local :<input type="file"　/>
             </div>
         </div>
+        <div id="dialog_save_file" title="Save document with annotation.">
+            <div>
+                Sever :<input type="text" style="width:345px"/><input type="button" value="OK" />
+            </div> 
+            <div>
+                Local :<span class="span_link_place"></span>
+            </div>
+        </div>
     </div>
 
     <div id="body">
