change id textae_container to class textae.

--- a/textae.html
+++ b/textae.html
@@ -16,7 +16,7 @@
 <body>
 <div id="css_area"></div>
 
-<div id="textae_container">
+<div class="textae">
 
      <div id="header">
         <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
