create jQuery plugin for textae-control.

--- a/textae.html
+++ b/textae.html
@@ -16,53 +16,8 @@
 <body>
 <div id="css_area"></div>
 
+<div class="textae-control"></div>
 <div class="textae">
-
-     <div id="header">
-        <div id = "title"><a href="http://bionlp.dbcls.jp/textae/">TextAE</a></div>
-        <div class = "icon_bar">
-            <div class="separator"></div>
-            <div class="icon" id="btn_read" title="Access [A]"></div>
-            <div class="icon" id="btn_write" title="Save [S]"></div>
-            <div class="separator"></div>
-            <div class="icon" id="btn_undo" title="Undo [Z]"></div>
-            <div class="icon" id="btn_redo" title="Redo [X]"></div>
-            <div class="separator"></div>
-            <div class="icon" id="btn_replicate" title="Replicate span annotation [R]"></div>
-            <div class="icon" id="btn_replicate_auto" title="Auto replicate (Toggle)"></div>
-            <div class="separator"></div>
-            <div class="icon" id="btn_entity" title="New entity [E]"></div>
-            <div class="icon" id="btn_pallet" title="Select label [Q]"></div>
-            <div class="icon" id="btn_new_label" title="Enter label [W]"></div>
-            <div class="separator"></div>
-            <div class="icon" id="btn_delete" title="Delete [D]"></div>
-            <div class="icon" id="btn_copy" title="Copy [C]"></div>
-            <div class="icon" id="btn_paste" title="Paste [V]"></div>
-            <div class="separator"></div>
-            <input class="control" id="line-height" />
-            <div class="separator"></div>
-            <div class="icon" id="btn_help" title="Help [H]"></div>
-            <div class="icon" id="btn_about" title="About"></div>
-            <div class="separator"></div>
-        </div>
-        <div id="dialog_load_file" title="Load document with annotation.">
-            <div>
-                Sever :<input type="text" style="width:345px"/><input type="button" value="OK" />
-            </div> 
-            <div>
-                Local :<input type="file"　/>
-            </div>
-        </div>
-        <div id="dialog_save_file" title="Save document with annotation.">
-            <div>
-                Sever :<input type="text" style="width:345px"/><input type="button" value="OK" />
-            </div> 
-            <div>
-                Local :<span class="span_link_place"></span>
-            </div>
-        </div>
-    </div>
-
     <div id="body">
         <div id="text_box"></div>
         <div id="annotation_box"></div>
