change div name from textae to textae-editor

--- a/textae.html
+++ b/textae.html
@@ -17,7 +17,7 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae">
+<div class="textae-editor">
     <div id="body">
         <div id="text_box"></div>
         <div id="annotation_box"></div>
