--- a/textae.html
+++ b/textae.html
@@ -17,11 +17,6 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae-editor">
-    <div id="body">
-        <div id="text_box"></div>
-        <div id="annotation_box"></div>
-    </div>
-</div>
+<div class="textae-editor"></div>
 </body>
 </html>
