create an object 'controller' that handle user input event.

--- a/textae.html
+++ b/textae.html
@@ -18,5 +18,6 @@
 
 <div class="textae-control"></div>
 <div class="textae-editor"></div>
+<!--<div class="textae-editor"></div>-->
 </body>
 </html>
