--- a/textae.html
+++ b/textae.html
@@ -9,8 +9,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="js/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script type="text/javascript" src="js/textae.js"></script>
+    <script type="text/javascript" src="dist/lib/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script type="text/javascript" src="dist/js/textae.js"></script>
 </head>
 
 <body>
