--- a/textae.html
+++ b/textae.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="dist/lib/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="dist/lib/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="dist/lib/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="dist/js/textae.js"></script>
 </head>
