specific files at attributes of html element instead of url.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae-editor" config="demo-config.json" annotations="demo-annotations.json"></div>
-<div class="textae-editor"config="demo2-config.json" annotations="demo2-annotations.json"></div>
+<div class="textae-editor" config="/config.json" annotations="/annotations.json"></div>
+<div class="textae-editor"config="/config.json" annotations="/annotations.json"></div>
 </body>
 </html>
