--- a/test/util.html
+++ b/test/util.html
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../src/util.js"></script>
+  <script type="text/javascript" src="../src/js/util.js"></script>
   <script src="test.js"></script>
 </body>
 </html>
