--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae-editor" config="/config.json" annotations="/annotations.json"></div>
-<div class="textae-editor"config="/config.json" annotations="/annotations.json"></div>
+<div class="textae-editor" config="1_config.json" annotations="1_annotations.json"></div>
+<div class="textae-editor" config="2_config.json" annotations="2_annotations.json"></div>
 </body>
 </html>
