Config files can be set by url parameter too.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 <div id="css_area"></div>
 
 <div class="textae-control"></div>
-<div class="textae-editor" config="1_config.json" annotations="1_annotations.json"></div>
+<div class="textae-editor"></div>
 <div class="textae-editor" config="2_config.json" annotations="2_annotations.json"></div>
 </body>
 </html>
