--- a/src/development.html
+++ b/src/development.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
     <link rel="stylesheet" href="css/textae-control.css">
+    <link rel="stylesheet" href="css/textae-editor.css">
 
     <script type="text/javascript" src="lib/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui-1.10.3.custom.min.js"></script>
@@ -24,6 +25,6 @@
 
 <div class="textae-control"></div>
 <div class="textae-editor"></div>
-<div class="textae-editor" config="2_config.json" annotations="2_annotations.json"></div>
+<div class="textae-editor" config="2_config.json" target="2_annotations.json"></div>
 </body>
 </html>
