Refactoring tool.js with Underscore.js.

--- a/src/development.html
+++ b/src/development.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="lib/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="lib/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script type="text/javascript" src="lib/underscore.js"></script>
     <script type="text/javascript" src="js/util.js"></script>
     <script type="text/javascript" src="js/editor.js"></script>
     <script type="text/javascript" src="js/control.js"></script>
