Add YUI CSS Reset.

--- a/src/development.html
+++ b/src/development.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
+    <link rel="stylesheet" href="css/cssreset-min.css">
     <link rel="stylesheet" href="css/jquery-ui-1.10.3.custom.min.css" />
     <link rel="stylesheet" href="css/jquery.ui.slider.css" />
     <link rel="stylesheet" href="css/textae.css">
