--- a/src/development.html
+++ b/src/development.html
@@ -29,5 +29,6 @@
 <div class="textae-control"></div>
 <div class="textae-editor"></div>
 <div class="textae-editor" config="2_config.json" target="2_annotations.json"></div>
+<div class="textae-editor" config="2_config.json" target="3_annotations.json"></div>
 </body>
 </html>
