Split a file of 'editor-make-id-factory.js'

--- a/src/development.html
+++ b/src/development.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="lib/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="lib/underscore.js"></script>
     <script type="text/javascript" src="js/util.js"></script>
+    <script type="text/javascript" src="js/editor-make-id-factory.js"></script>
     <script type="text/javascript" src="js/editor-make-model.js"></script>
     <script type="text/javascript" src="js/editor.js"></script>
     <script type="text/javascript" src="js/control.js"></script>
