Move css files of third-party libraries to vender directory.

--- a/src/development.html
+++ b/src/development.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="css/cssreset-min.css">
-    <link rel="stylesheet" href="css/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="vender/cssreset-min.css">
+    <link rel="stylesheet" href="vender/jquery-ui-1.10.3.custom.min.css" />
     <link rel="stylesheet" href="css/textae.css">
     <link rel="stylesheet" href="css/textae-control.css">
     <link rel="stylesheet" href="css/textae-editor.css">
