--- a/src/demo/bionlp-st-ge/index.html
+++ b/src/demo/bionlp-st-ge/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="../../css/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="../../vender/jquery-ui-1.10.3.custom.min.css" />
 
     <script type="text/javascript" src="../../vender/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="../../vender/jquery-ui-1.10.3.custom.min.js"></script>
