--- a/src/development.html
+++ b/src/development.html
@@ -13,14 +13,14 @@
     <script type="text/javascript" src="vender/jquery-ui-1.10.3.custom.min.js"></script>
     <script type="text/javascript" src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
     <script type="text/javascript" src="vender/underscore.js"></script>
-    <script type="text/javascript" src="js/util.js"></script>
-    <script type="text/javascript" src="js/editor-make-id-factory.js"></script>
-    <script type="text/javascript" src="js/editor-make-model.js"></script>
-    <script type="text/javascript" src="js/editor.js"></script>
-    <script type="text/javascript" src="js/control.js"></script>
-    <script type="text/javascript" src="js/tool.js"></script>
-    <script type="text/javascript" src="js/jquery.textae.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="lib/util.js"></script>
+    <script type="text/javascript" src="lib/editor-make-id-factory.js"></script>
+    <script type="text/javascript" src="lib/editor-make-model.js"></script>
+    <script type="text/javascript" src="lib/editor.js"></script>
+    <script type="text/javascript" src="lib/control.js"></script>
+    <script type="text/javascript" src="lib/tool.js"></script>
+    <script type="text/javascript" src="lib/jquery.textae.js"></script>
+    <script type="text/javascript" src="lib/main.js"></script>
 </head>
 
 <body>
