--- a/test/src/util.html
+++ b/test/src/util.html
@@ -10,7 +10,7 @@
   <div id="qunit-fixture"></div>
   <script type="text/javascript" src="../lib/qunit-1.12.0.js"></script>
   <script type="text/javascript" src="../../src/vender/jquery-2.0.3.min.js"></script>
-  <script type="text/javascript" src="../../src/js/util.js"></script>
+  <script type="text/javascript" src="../../src/lib/util.js"></script>
   <script src="test.js"></script>
 </body>
 </html>
