Move the 'css' directory to the 'lib' directory.

--- a/src/development.html
+++ b/src/development.html
@@ -5,9 +5,9 @@
 
     <link rel="stylesheet" href="vender/cssreset-min.css">
     <link rel="stylesheet" href="vender/jquery-ui-1.10.3.custom.min.css" />
-    <link rel="stylesheet" href="css/textae.css">
-    <link rel="stylesheet" href="css/textae-control.css">
-    <link rel="stylesheet" href="css/textae-editor.css">
+    <link rel="stylesheet" href="lib/css/textae.css">
+    <link rel="stylesheet" href="lib/css/textae-control.css">
+    <link rel="stylesheet" href="lib/css/textae-editor.css">
 
     <script type="text/javascript" src="vender/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="vender/jquery-ui-1.10.3.custom.min.js"></script>
