--- a/src/demo/bionlp-st-ge/demo-local.html
+++ b/src/demo/bionlp-st-ge/demo-local.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
 
     <link rel="stylesheet" href="../../vender/jquery-ui-1.10.3.custom.min.css" />
+    <link rel="stylesheet" href="../../lib/css/lib-textae-4.0.1.min.css" />
 
     <script type="text/javascript" src="../../vender/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="../../vender/jquery-ui-1.10.3.custom.min.js"></script>
