Default value of the type of the script tag is "text/javascript" in HTML5.

--- a/src/development.html
+++ b/src/development.html
@@ -9,18 +9,18 @@
     <link rel="stylesheet" href="lib/css/textae-control.css">
     <link rel="stylesheet" href="lib/css/textae-editor.css">
 
-    <script type="text/javascript" src="vender/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="vender/jquery-ui-1.10.3.custom.min.js"></script>
-    <script type="text/javascript" src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script type="text/javascript" src="vender/underscore.js"></script>
-    <script type="text/javascript" src="lib/util.js"></script>
-    <script type="text/javascript" src="lib/editor-make-id-factory.js"></script>
-    <script type="text/javascript" src="lib/editor-make-model.js"></script>
-    <script type="text/javascript" src="lib/editor.js"></script>
-    <script type="text/javascript" src="lib/control.js"></script>
-    <script type="text/javascript" src="lib/tool.js"></script>
-    <script type="text/javascript" src="lib/jquery.textae.js"></script>
-    <script type="text/javascript" src="lib/main.js"></script>
+    <script src="vender/jquery-2.0.3.min.js"></script>
+    <script src="vender/jquery-ui-1.10.3.custom.min.js"></script>
+    <script src="vender/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script src="vender/underscore.js"></script>
+    <script src="lib/util.js"></script>
+    <script src="lib/editor-make-id-factory.js"></script>
+    <script src="lib/editor-make-model.js"></script>
+    <script src="lib/editor.js"></script>
+    <script src="lib/control.js"></script>
+    <script src="lib/tool.js"></script>
+    <script src="lib/jquery.textae.js"></script>
+    <script src="lib/main.js"></script>
 </head>
 
 <body>
