Change links of demo-cdn.html to local server.

--- a/src/demo/bionlp-st-ge/demo-cdn.html
+++ b/src/demo/bionlp-st-ge/demo-cdn.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-    <script type="text/javascript" src="http://bionlp.dbcls.jp/textae/vender/jquery.jsPlumb-1.5.2-min.js"></script>
-    <script type="text/javascript" src="http://bionlp.dbcls.jp/textae/lib/lib-textae-4.0.1.min.js"></script>
+    <script type="text/javascript" src="http://localhost:8000/dist/vender/jquery.jsPlumb-1.5.2-min.js"></script>
+    <script type="text/javascript" src="http://localhost:8000/dist/lib/lib-textae-4.0.1.min.js"></script>
 </head>
 
 <body>
