Extract a file of the dataAccessObject.

--- a/src/development.html
+++ b/src/development.html
@@ -16,6 +16,7 @@
     <script src="lib/util.js"></script>
     <script src="lib/editor-make-id-factory.js"></script>
     <script src="lib/editor-make-model.js"></script>
+    <script src="lib/editor-make-data-access-object.js"></script>
     <script src="lib/editor.js"></script>
     <script src="lib/control.js"></script>
     <script src="lib/tool.js"></script>
